@@ -1,4 +1,11 @@
 2016-07-23  Markus Gans  <guru.mail@muenster.de>
+	* Add missing null pointer check in FOptiAttr before dereferencing
+	* Remove callbacks and accelerator keys from FDialogListMenu
+	  on closing of a dialog window
+	* Execute accelerator keys only once
+	* Improved window focus behavior
+
+2016-07-23  Markus Gans  <guru.mail@muenster.de>
 	* Add a modifier key correction for the linux tty
 	* Support to read meta+enter from keyboard
 
